Archive2/62/7afa7d15284a19/output
main.cpp: In function 'T f(T&&, T&&)':
main.cpp:6:12: error: expected unqualified-id before 'if'
     static if(decltype(a) == const T& && decltype(b) == const T&){
            ^
main.cpp:9:5: error: 'else' without a previous 'if'
     else{
     ^
